maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:25: error: ':' expected but ')' found.
def quitterMur(sommeAngle) = {
                         ^Escaper:77: error: identifier expected but '}' found.
}
^